Se crea la libreta de espacios de color y métricas básicas en imágenes
Signed-off-by: Ruben Hernandez <rubendez21@gmail.com>

--- a/Modulo_01/introduccion.ipynb
+++ b/Modulo_01/introduccion.ipynb
@@ -10,6 +10,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "885d6228",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hola Mundo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "95dd373d",
    "metadata": {},
@@ -26,15 +44,15 @@
      "output_type": "stream",
      "text": [
       "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n",
-      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/VAvenv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
+      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/venv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
       "Note that Qt no longer ships fonts. Deploy some (from https://dejavu-fonts.github.io/ for example) or switch to fontconfig.\n",
-      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/VAvenv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
+      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/venv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
       "Note that Qt no longer ships fonts. Deploy some (from https://dejavu-fonts.github.io/ for example) or switch to fontconfig.\n",
-      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/VAvenv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
+      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/venv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
       "Note that Qt no longer ships fonts. Deploy some (from https://dejavu-fonts.github.io/ for example) or switch to fontconfig.\n",
-      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/VAvenv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
+      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/venv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
       "Note that Qt no longer ships fonts. Deploy some (from https://dejavu-fonts.github.io/ for example) or switch to fontconfig.\n",
-      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/VAvenv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
+      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/venv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
       "Note that Qt no longer ships fonts. Deploy some (from https://dejavu-fonts.github.io/ for example) or switch to fontconfig.\n"
      ]
     }
