Descripción de entropía
Signed-off-by: Ruben Hernandez <rubendez21@gmail.com>

--- a/Modulo_01/espacios_color_metricas.ipynb
+++ b/Modulo_01/espacios_color_metricas.ipynb
@@ -118,13 +118,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bf001a0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def calcular_entropia(imagen):\n",
-    "    \"\"\"Calcula la entropía de una imagen en escala de grises\"\"\"\n",
+    "    \"\"\"Calcula la entropía de una imagen en escala de grises\n",
+    "    \n",
+    "    La entropía en imágenes es una medida de la complejidad, información o incertidumbre\n",
+    "    en la distribución de intensidades de los píxeles. Su interpretación varía según\n",
+    "    la forma del histograma:\n",
+    "    \n",
+    "    INTERPRETACIÓN POR VALORES DE ENTROPÍA (para imágenes 8-bit):\n",
+    "    \n",
+    "    BAJA ENTROPÍA (0-2 bits):\n",
+    "        - Imagen con poca información/complejidad visual\n",
+    "        - Histograma muy concentrado en pocos valores\n",
+    "        - Típico en: fondos uniformes, imágenes muy oscuras/claras, \n",
+    "          objetos simples sobre fondo contrastante\n",
+    "        - Ejemplos: cielo despejado, hoja blanca con texto negro, \n",
+    "          silueta sobre fondo plano\n",
+    "    \n",
+    "    ENTROPÍA MEDIA (3-5 bits):\n",
+    "        - Cantidad moderada de información visual\n",
+    "        - Histograma balanceado pero no uniforme\n",
+    "        - Imágenes naturales y fotografías típicas\n",
+    "        - Texturas visibles pero no excesivamente complejas\n",
+    "        - Ejemplos: retratos, paisajes, imágenes médicas estándar\n",
+    "    \n",
+    "    ALTA ENTROPÍA (6-8 bits):\n",
+    "        - Máxima información/complejidad visual\n",
+    "        - Histograma cercano a la distribución uniforme\n",
+    "        - Indica: mucho ruido, texturas muy detalladas, \n",
+    "          patrones complejos o imágenes compuestas\n",
+    "        - Ejemplos: ruido sal y pimienta, texturas detalladas, \n",
+    "          multitudes, imágenes esteganográficas\n",
+    "    \n",
+    "    RELACIÓN ENTRE HISTOGRAMA Y ENTROPÍA:\n",
+    "        1. Histograma unimodal muy estrecho → Entropía muy baja\n",
+    "        2. Histograma con varios picos → Entropía media\n",
+    "        3. Histograma plano/ruidoso → Entropía alta (cercana a log2(L))\n",
+    "        4. Histograma bimodal bien separado → Entropía media-baja\n",
+    "    \n",
+    "    APLICACIONES PRÁCTICAS:\n",
+    "        - Compresión: baja entropía = alta compresibilidad\n",
+    "        - Detección de ruido: alta entropía puede indicar ruido\n",
+    "        - Análisis de texturas: entropía como descriptor\n",
+    "        - Segmentación: áreas uniformes vs detalladas\n",
+    "        - Esteganografía: cambios en entropía pueden revelar datos ocultos\n",
+    "    \n",
+    "    \"\"\"\n",
     "    if len(imagen.shape) == 3:\n",
     "        imagen = cv2.cvtColor(imagen, cv2.COLOR_BGR2GRAY)\n",
     "    \n",
