Corrección de matriz de rotación
Signed-off-by: Ruben Hernandez <rubendez21@gmail.com>

--- a/Modulo_02/primitivas_geometricas.ipynb
+++ b/Modulo_02/primitivas_geometricas.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6820a448",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "42e00447",
    "metadata": {},
    "outputs": [],
@@ -33,20 +33,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "dfea3b40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n",
+      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/venv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
+      "Note that Qt no longer ships fonts. Deploy some (from https://dejavu-fonts.github.io/ for example) or switch to fontconfig.\n",
+      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/venv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
+      "Note that Qt no longer ships fonts. Deploy some (from https://dejavu-fonts.github.io/ for example) or switch to fontconfig.\n",
+      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/venv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
+      "Note that Qt no longer ships fonts. Deploy some (from https://dejavu-fonts.github.io/ for example) or switch to fontconfig.\n",
+      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/venv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
+      "Note that Qt no longer ships fonts. Deploy some (from https://dejavu-fonts.github.io/ for example) or switch to fontconfig.\n",
+      "QFontDatabase: Cannot find font directory /home/ruben/Documentos/Codigos/Python/VisionArtificial/VisionArtificial/venv/lib/python3.11/site-packages/cv2/qt/fonts.\n",
+      "Note that Qt no longer ships fonts. Deploy some (from https://dejavu-fonts.github.io/ for example) or switch to fontconfig.\n"
+     ]
+    }
+   ],
    "source": [
     "w = 250\n",
     "h = 250\n",
+    "\n",
     "imagen_base = np.zeros((w, h))\n",
     "muestra_imagen(imagen_base)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "e122bec9",
    "metadata": {},
    "outputs": [],
@@ -60,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "id": "16b31176",
    "metadata": {},
    "outputs": [
@@ -101,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "id": "86a6c690",
    "metadata": {},
    "outputs": [],
@@ -111,7 +130,7 @@
     "    def rotacion(angulo):\n",
     "        return np.array([\n",
     "            [np.cos(angulo), -np.sin(angulo), 0],\n",
-    "            [np.sin(angulo), np.cos(angulo), 1],\n",
+    "            [np.sin(angulo), np.cos(angulo), 0],\n",
     "            [0, 0, 1]\n",
     "        ])\n",
     "    \n",
@@ -141,18 +160,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "0acbb21f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ruta = \"ovalo.png\"\n",
+    "imagen_base = cv2.imread(ruta, cv2.IMREAD_GRAYSCALE)\n",
+    "w,h = imagen_base.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "c0efd4e4",
    "metadata": {},
    "outputs": [],
    "source": [
     "imagen_transformada = np.zeros((w, h), dtype=imagen_base.dtype)\n",
     "\n",
-    "R = TransformacionesEuclideanas.rotacion(np.pi/16)\n",
-    "T1 = TransformacionesEuclideanas.traslado(-125, -125)\n",
-    "T2 = TransformacionesEuclideanas.traslado(125, 125)\n",
+    "centro_x, centro_y = int(round(w/2)), int(round(h/2))\n",
     "\n",
-    "#T = traslado2 @ rotacion @ traslado\n",
+    "R = TransformacionesEuclideanas.rotacion(-np.pi/8)\n",
+    "T1 = TransformacionesEuclideanas.traslado(-centro_x, -centro_y)\n",
+    "T2 = TransformacionesEuclideanas.traslado(centro_x, centro_y)\n",
+    "\n",
+    "#T = traslado2 @ rotacion @ traslado @ es producto matricial\n",
     "T = T2 @ R @ T1\n",
     "\n",
     "M_inv = np.linalg.inv(T)\n",
@@ -172,6 +205,20 @@
     "            imagen_transformada[y, x] = imagen_base[y_idx, x_idx]\n",
     "            \n",
     "muestra_imagen(imagen_transformada)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a11c0fbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Tarea:\n",
+    "Dibujar tres imagenes en Paint (ajustar el tamaño de la imagen). Guardar en png\n",
+    "Aplicar 4 transformaciones euclidenanas.\n",
+    "\"\"\""
    ]
   }
  ],
