Se ajustan problemas con los tamaños de la imagen final en primitivas_geometricas (El calculo de la transformación para imagenes de ancho y alto diferente). Se añade código para captura desde camara. Se incluye clase para transformaciones. Hay un metodo especial para transformación con opencv. Se modifica rotacion con escala
Signed-off-by: Ruben Hernandez <rubendez21@gmail.com>

--- a/Modulo_02/primitivas_geometricas.ipynb
+++ b/Modulo_02/primitivas_geometricas.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6820a448",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "42e00447",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "dfea3b40",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "16b31176",
    "metadata": {},
    "outputs": [
@@ -120,17 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "86a6c690",
    "metadata": {},
    "outputs": [],
    "source": [
     "class TransformacionesEuclideanas:\n",
     "    @staticmethod\n",
-    "    def rotacion(angulo):\n",
+    "    def rotacion(angulo, s=1):\n",
     "        return np.array([\n",
-    "            [np.cos(angulo), -np.sin(angulo), 0],\n",
-    "            [np.sin(angulo), np.cos(angulo), 0],\n",
+    "            [s*np.cos(angulo), -s*np.sin(angulo), 0],\n",
+    "            [s*np.sin(angulo), s*np.cos(angulo), 0],\n",
     "            [0, 0, 1]\n",
     "        ])\n",
     "    \n",
@@ -172,16 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "c0efd4e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "imagen_transformada = np.zeros((w, h), dtype=imagen_base.dtype)\n",
+    "imagen_transformada = np.zeros((h, w), dtype=imagen_base.dtype)\n",
     "\n",
-    "centro_x, centro_y = int(round(w/2)), int(round(h/2))\n",
+    "centro_x, centro_y = int(round(h/2)), int(round(w/2))\n",
     "\n",
-    "R = TransformacionesEuclideanas.rotacion(-np.pi/8)\n",
+    "R = TransformacionesEuclideanas.rotacion(-np.pi/8, 0.5)\n",
     "T1 = TransformacionesEuclideanas.traslado(-centro_x, -centro_y)\n",
     "T2 = TransformacionesEuclideanas.traslado(centro_x, centro_y)\n",
     "\n",
@@ -200,8 +200,8 @@
     "        #Si está dentro de la imagen original\n",
     "        if 0 <= x_origen < w and 0 <= y_origen < h:\n",
     "        # Interpolación por vecino más cercano\n",
-    "            x_idx = int(round(x_origen))%h\n",
-    "            y_idx = int(round(y_origen))%w\n",
+    "            y_idx = int(round(y_origen))%h\n",
+    "            x_idx = int(round(x_origen))%w\n",
     "            imagen_transformada[y, x] = imagen_base[y_idx, x_idx]\n",
     "            \n",
     "muestra_imagen(imagen_transformada)"
