Ajuste de muestra del histograma
Signed-off-by: Ruben Hernandez <rubendez21@gmail.com>

--- a/Modulo_03/transformaciones_pixel.ipynb
+++ b/Modulo_03/transformaciones_pixel.ipynb
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "2714f5bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
+       "{'divide': 'warn', 'over': 'raise', 'under': 'ignore', 'invalid': 'warn'}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "id": "02cfd2d0",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "b3ca580a",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "id": "194c62f9",
    "metadata": {},
    "outputs": [
@@ -75,13 +75,13 @@
        "-1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "imagen_procesada = contraste_brillo(imagen, 1.2, 0)\n",
+    "imagen_procesada = contraste_brillo(imagen, 1.2, -30)\n",
     "imagenes_comparadas = np.hstack((imagen, imagen_procesada))\n",
     "cv2.imshow(\"Comparacion\", imagenes_comparadas)\n",
     "cv2.waitKey(0)"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "id": "627e521d",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "-1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "id": "9f7eee04",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "id": "d4954026",
    "metadata": {},
    "outputs": [
@@ -134,20 +134,20 @@
        "-1"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "imagen_color_procesada = contraste_brillo_mat(imagen_color, 1.5, 0)\n",
+    "imagen_color_procesada = contraste_brillo_mat(imagen_color, 2,-60)\n",
     "cv2.imshow(\"Imagen a color procesada\", imagen_color_procesada)\n",
     "cv2.waitKey(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "id": "6a40f01b",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "-1"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
     "imagen_color_HSV = cv2.cvtColor(cv2.imread(ruta), cv2.COLOR_BGR2HSV)\n",
     "imagen_color_HSV.shape\n",
     "imagen_v = imagen_color_HSV[:,:,2]\n",
-    "imagen_color_HSV_procesada = contraste_brillo_mat(imagen_v, 2, 0)\n",
+    "imagen_color_HSV_procesada = contraste_brillo_mat(imagen_v, 1.2, -30)\n",
     "imagen_color_HSV[:,:,2] = imagen_color_HSV_procesada\n",
     "imagen_color_procesada = cv2.cvtColor(imagen_color_HSV, cv2.COLOR_HSV2BGR)\n",
     "\n",
